# ADLI-SDK

./: README.md  pyproject.toml
examples/: langchain.py  langchain_langfuse.py  langchain_langsmith.py  langchain_wo_wrapper.py  pydantic_ai.py  pydantic_ai_logfire.py  pydantic_ai_wo_wrapper.py
src/adli_sdk/: __init__.py  client.py  flush_helpers.py  langchain_callback.py  llama_index_callback.py  models.py  openai_agents_processor.py  processor.py  trace_assembler.py  wrapper.py
src/adli_sdk/interceptors/: _base.py  crewai.py  langchain.py  llamaindex.py  pydantic_ai.py
